--- a/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "<IPython.utils.io.Tee at 0x7f236059fa00>"
+       "<IPython.utils.io.Tee at 0x7f378959e9a0>"
       ]
      },
      "execution_count": 2,
@@ -65,15 +65,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of force cells in the robotic leg\n",
-    "N_CELLS = 8\n",
+    "JOINT = 'Ankle'\n",
+    "FORCE_CELLS_PER_JOINT = {\n",
+    "    'Hip': [5, 6],\n",
+    "    'Knee': [3, 4, 7, 8],\n",
+    "    'Ankle': [1, 2]\n",
+    "}\n",
+    "\n",
+    "CELLS = FORCE_CELLS_PER_JOINT[JOINT]\n",
     "\n",
     "# Path where the results are stored\n",
     "RESULTS_PATH = '../../../../results'\n",
     "# ID of the training and validation data resulting from this notebook, stored in RESULTS_PATH\n",
-    "DATA_ID = '0005_19042021'\n",
+    "DATA_ID = '0013_09082021'\n",
     "# Number of folds for cross-validation\n",
-    "CV = 6\n",
+    "CV = 4\n",
     "\n",
     "print('Model training with data: ' + DATA_ID)"
    ]
@@ -87,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyperparameters search date\n",
-    "hs_date = '20042021'\n",
+    "hs_date = '11082021'\n",
     "\n",
     "# Parameters grid\n",
     "param_grid = {\n",
@@ -124,10 +130,10 @@
     "        print('Fold {}'.format(fold_id + 1))\n",
     "        \n",
     "        # Load data\n",
-    "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_X_train_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_X_valid_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_Y_train_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_Y_valid_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
     "        \n",
     "        results = defaultdict(list)\n",
     "        tr_time = []\n",
@@ -156,9 +162,9 @@
     "        print('Training time: {:.4f}'.format(cv_results['fit_time'][-1]))\n",
     "\n",
     "        for subset in ['Train', 'Valid']:\n",
-    "            for f, force in enumerate(['Fx', 'Fy', 'Fz']):\n",
+    "            for f, force in enumerate(['Fx', 'Fy']):\n",
     "                for loss in ['MAE', 'MSE', 'R2']:\n",
-    "                    scores = [results['_'.join([subset, loss])][i + f] for i in range(0, N_CELLS * 3, 3)]\n",
+    "                    scores = [results['_'.join([subset, loss])][i + f] for i in range(0, len(CELLS) * 2, 2)]\n",
     "                    cv_results['_'.join([subset, force, loss, 'mean'])].append(np.mean(scores))\n",
     "                    cv_results['_'.join([subset, force, loss, 'std'])].append(np.std(scores))\n",
     "            \n",
@@ -168,11 +174,11 @@
     "    rd['parameters'] = params\n",
     "    rd['cv_results'] = dict(cv_results)\n",
     "    \n",
-    "    save_dir = os.path.join(RESULTS_PATH, DATA_ID, 'XGB_{}'.format(hs_date))\n",
+    "    save_dir = os.path.join(RESULTS_PATH, DATA_ID, '{}_XGB_{}'.format(JOINT, hs_date))\n",
     "    if not os.path.exists(save_dir):\n",
     "        os.makedirs(save_dir)\n",
     "        \n",
-    "    with open(os.path.join(save_dir, 'XGB_{}_{}.json'.format(hs_date, params_id)), 'w') as fp:\n",
+    "    with open(os.path.join(save_dir, '{}_XGB_{}_{}.json'.format(JOINT, hs_date, params_id)), 'w') as fp:\n",
     "        json.dump(rd, fp)\n",
     "    \n",
     "    print('\\n\\n')\n",
@@ -209,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
